clear redundant files
