# cmd/2gis-crawler/docs/swagger.json
@@ -26,7 +26,7 @@
                 "operationId": "sources-poll",
                 "parameters": [
                     {
-                        "description": "data",
+                        "description": "urls array",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -53,6 +53,24 @@
                         "schema": {
                             "$ref": "#/definitions/web.errResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/swagger": {
+            "get": {
+                "description": "Описание API",
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "swagger"
+                ],
+                "summary": "swagger",
+                "operationId": "swagger",
+                "responses": {
+                    "200": {
+                        "description": "swagger html page"
                     }
                 }
             }
